Fix landing page icons alignment, add brownline on homepage

--- a/src/scss/partials/_home.scss
+++ b/src/scss/partials/_home.scss
@@ -128,7 +128,7 @@
     position: absolute;
     width: 100%;
     height: 10px;
-    background: url(/images/redline.png);
+    background: url(/images/brownline.png);
   }
 }
 
